--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/o6sEafw6'>Farfetch Careers - Full Stack Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://fractalanalytics.applytojob.com/apply/bs79JV7FwI/Senior-Engineer-Full-Stack'>Senior Engineer, Full Stack - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/unusual/25767594-c4a2-4f1f-87a8-b81630b0819d'>Unusual Ventures - Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unusual/25767594-c4a2-4f1f-87a8-b81630b0819d'>Unusual Ventures - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -118,7 +122,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/letgo/jobs/1788032'>Job Application for Full Stack Engineer at letgo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/letgo/jobs/1788032'>Job Application for Full Stack Engineer at letgo</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -126,11 +130,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999692217089-senior-java-full-stack-developer'>outsourced Senior Java Full-Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999692217089-senior-java-full-stack-developer'>outsourced Senior Java Full-Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
+<h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Full Stack Engineer at Ontruck.</p>
 <hr/>
@@ -231,7 +235,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/zenefits/jobs/1771950'>Job Application for Fullstack Engineer at Zenefits</a></h5> 
+<h5><a href='https://boards.greenhouse.io/zenefits/jobs/1771950'>Job Application for Fullstack Engineer at Zenefits</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As our Senior Full Stack Engineer you'll get your hands dirty while building 
 elements of our HR platform offerings as well as automating our complex 
@@ -354,7 +358,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durstexpress.join.com/jobs/259473-senior-fullstack-engineer-php'>Job @ Durstexpress (Berlin): (Senior) Fullstack En... | JOIN</a></h5> 
+<h5><a href='https://durstexpress.join.com/jobs/259473-senior-fullstack-engineer-php'>Job @ Durstexpress (Berlin): (Senior) Fullstack En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -416,11 +420,11 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Full Stack Engineer (Javascript) at KNOREX.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Full Stack Engineer (PHP/Vue.JS) at OneinaMil.</p>
 <hr/>
-<h5><a href='https://findmypast.workable.com/j/797F20DE01?viewed=true'>Findmypast - Jobs: Senior Full Stack Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://findmypast.workable.com/j/797F20DE01?viewed=true'>Findmypast - Jobs: Senior Full Stack Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Senior Full Stack Engineer at Findmypast.</p>
 <hr/>
@@ -462,11 +466,6 @@ the job details and apply today!</p>
 <h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692146434-full-stack-software-engineer-php'>Bynder Full Stack Software Engineer - PHP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/1E79FF9292'>Youtap Limited - Jobs: Senior Back End Java Developer (Full Stack ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
-Limited.</p>
 <hr/>
 
 
